<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context="heinke.hsmontagens.view.Login">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:srcCompat="@mipmap/ic_launcher_round"/>

    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="5dp"
        android:hint="@string/login"
        android:inputType="text"/>

    <EditText
        android:id="@+id/senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="2dp">

        <TextView
            android:id="@+id/esqueciSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/esqueciSenha"
            android:layout_marginLeft="50dp"
            android:textColor="#0000ff"/>

        <TextView
            android:id="@+id/primeiroAcesso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/primeiroAcesso"
            android:textStyle="bold"
            android:layout_marginLeft="50dp"
            android:textColor="#0000ff"/>

    </LinearLayout>
    <Button
        android:id="@+id/entrar"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="#fff"
        android:background="#000"/>

</LinearLayout>
